--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -11,7 +12,11 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
-    "mongoose": "^6.6.1"
+    "mongoose": "^6.6.1",
+    "nodemon": "^2.0.20"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jest": "^29.1.0"
+  }
 }
