--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "winston": "^3.8.2"
   },
   "description": "",
   "devDependencies": {
